# rsi3status

./: Cargo.toml  README.md  cpu.rs
.github/workflows/: rust.yml
src/: battery.rs  colorscale.rs  cpu.rs  gauge.rs  lib.rs  main.rs  status.rs  status_item.rs  time.rs
src/cpu/: mod.rs
src/cpu/freebsd/: cpu.rs
src/cpu/linux/: cpu.rs  cpu_status_provider.rs  mod.rs  stats.rs
src/status/: mod.rs  status.rs
