[package]
name = "rsi3status"
version = "0.1.0"
authors = ["Fernando Herrero Carrón <elferdo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
sysctl = "0.4.0"
itertools = "0.8.2"
libc = "*"
rgb = "0.8.14"